--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: schuber6.github.io
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Data Scientist from Columbus, Ohio
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://imgur.com/gallery/I9PYjy1
 
 #
 # Flags below are optional
