--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: schuber6.github.io
 description: Data Scientist from Columbus, Ohio
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://imgur.com/gallery/I9PYjy1.png
+avatar: https://raw.githubusercontent.com/schuber6/schuber6.github.io/master/DifferencesOfTimelapseFrames.png
 
 #
 # Flags below are optional
